--- a/src/app/chat-app.component.html
+++ b/src/app/chat-app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<div class="flex">
+  <app-messages [messages]="messages | async" [currentUser]="user"></app-messages>
+  <app-text></app-text>
+</div>
